syntax = "proto3";

import "mapreduce/yt/interface/protos/extension.proto";

package NAlice;
option go_package = "a.yandex-team.ru/alice/protos/data/droideka";
option java_package = "ru.yandex.alice.protos.data.droideka";

message TCarouselItem {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TStream {
        string StreamType = 1 [json_name = "stream_type", (NYT.column_name) = "stream_type"];
        string Url = 2 [json_name = "url", (NYT.column_name) = "url"];
    }

    message TOttParams {
        message TLicense {
            string monetizationModel = 1 [json_name = "monetizationModel", (NYT.column_name) = "monetization_model"];
            bool Active = 2 [json_name = "active", (NYT.column_name) = "active"];
            bool Primary = 3 [json_name = "primary", (NYT.column_name) = "primary"];
        }

        string MonetizationModel = 1 [json_name = "monetizationModel", (NYT.column_name) = "monetization_model"];
        string ServiceName = 2 [json_name = "serviceName", (NYT.column_name) = "service_name"];
        uint32 ContentTypeID = 3 [json_name = "contentTypeID", (NYT.column_name) = "content_type_id"];
        string KpId = 4 [json_name = "kpId", (NYT.column_name) = "kp_id"];
        repeated TLicense Licenses = 5 [json_name = "licenses", (NYT.column_name) = "licenses"];
        string Reqid = 6 [json_name = "reqid", (NYT.column_name) = "reqid"];
        string Yandexuid = 7 [json_name = "yandexuid", (NYT.column_name) = "yandexuid"];
        string Uuid = 8 [json_name = "uuid", (NYT.column_name) = "uuid"];
        string From = 9 [json_name = "from", (NYT.column_name) = "from"];
    }

    string ContentId = 1 [json_name = "content_id", (NYT.column_name) = "content_id"];
    uint32 RestrictionAge = 2 [json_name = "restriction_age", (NYT.column_name) = "restriction_age"];
    string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
    bool DeepHd = 4 [json_name = "deep_hd", (NYT.column_name) = "deep_hd"];
    string ContentUrl = 5 [json_name = "content_url", (NYT.column_name) = "content_url"];
    string OntoCategory = 6 [json_name = "onto_category", (NYT.column_name) = "onto_category"];
    double RatingKp = 7 [json_name = "rating_kp", (NYT.column_name) = "rating_kp"];
    string ReleaseYear = 8 [json_name = "release_year", (NYT.column_name) = "release_year"];
    string Countries = 9 [json_name = "countries", (NYT.column_name) = "countries"];
    uint32 PercentageScore = 10 [json_name = "percentage_score", (NYT.column_name) = "percentage_score"];
    TOttParams OttParams = 11 [json_name = "ottParams", (NYT.column_name) = "ott_params"];
    string ShowTvPromo = 12 [json_name = "show_tv_promo", (NYT.column_name) = "show_tv_promo"];
    uint32 HasCachup = 13 [json_name = "has_cachup", (NYT.column_name) = "has_cachup"];
    uint32 CatchupAge = 14 [json_name = "catchup_age", (NYT.column_name) = "catchup_age"];
    string ParentId = 15 [json_name = "parent_id", (NYT.column_name) = "parent_id"];
    string MainColor = 16 [json_name = "main_color", (NYT.column_name) = "main_color"];
    string Description = 17 [json_name = "description", (NYT.column_name) = "description"];
    string OntoId = 18 [json_name = "onto_id", (NYT.column_name) = "onto_id"];
    string Logo = 19 [json_name = "logo", (NYT.column_name) = "logo"];
    string ShortDescription = 20 [json_name = "short_description", (NYT.column_name) = "short_description"];
    uint32 DurationS = 21 [json_name = "duration_s", (NYT.column_name) = "duration_s"];
    string ContentType = 22 [json_name = "content_type", (NYT.column_name) = "content_type"];
    string Thumbnail = 23 [json_name = "thumbnail", (NYT.column_name) = "thumbnail"];
    string Genres = 24 [json_name = "genres", (NYT.column_name) = "genres"];
    repeated string Licenses = 25 [json_name = "licenses", (NYT.column_name) = "licenses"];
    map<string, bool> Owned = 26 [json_name = "owned", (NYT.column_name) = "owned"];
    string Poster = 27 [json_name = "poster", (NYT.column_name) = "poster"];
    string PlayerId = 28 [json_name = "player_id", (NYT.column_name) = "player_id"];
    repeated TStream Streams = 29 [json_name = "streams", (NYT.column_name) = "streams"];
}

message TNextPortionInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Url = 1 [json_name = "url", (NYT.column_name) = "url"];
    string Icon = 2 [json_name = "icon", (NYT.column_name) = "icon"];
}

message TUserData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string ReqId = 1 [json_name = "req_id", (NYT.column_name) = "req_id"];
}

message TVideohostingBalancerRequestInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string VideohostingBalancerRequestId = 1 [json_name = "req_id", (NYT.column_name) = "req_id"];
}

message TCarousel {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string CarouselId = 1 [json_name = "carousel_id", (NYT.column_name) = "carousel_id"];
    bool HasVertical = 2 [json_name = "has_vertical", (NYT.column_name) = "has_vertical"];
    string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
    string CacheHash = 4 [json_name = "cache_hash", (NYT.column_name) = "cache_hash"];
    string More = 5 [json_name = "more", (NYT.column_name) = "more"];
    reserved 6; reserved "MoreInfo";
    repeated TCarouselItem Includes = 7 [json_name = "includes", (NYT.column_name) = "includes"];
    TNextPortionInfo NextDocumentsPortionInfo = 8 [json_name = "more_info", (NYT.column_name) = "more_info"];
}
