syntax = "proto3";

package NAlice.NData;

import "alice/protos/data/scenario/objects/image.proto";
import "mapreduce/yt/interface/protos/extension.proto";

option go_package = "a.yandex-team.ru/alice/protos/data/scenario/objects";
option java_package = "ru.yandex.alice.protos.data.scenario.objects";

message TVideoObject {
    enum EVideoType {
        Unknown = 0;
        Clip = 1;
        Movie = 2;
        // TODO: may be trailer, cartoon, etc (?)
    }
    // Внутренний идентификатор
    string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
    // Тип видео
    EVideoType VideoType = 2 [json_name = "video_type", (NYT.column_name) = "video_type"];
    // Основной заголовок
    string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
    // Подзаголовок
    string Subtitle = 4 [json_name = "subtitle", (NYT.column_name) = "subtitle"];
    // Ссылка на изображение
    TSingleImage.TImageRef Logo = 5 [json_name = "logo", (NYT.column_name) = "logo"];
    // Год выпуска (может быть 0 если неизвестен)
    int32 ReleaseYear = 6 [json_name = "release_year", (NYT.column_name) = "release_year"];
    // Описание (может быть пустым, если это не фильм)
    string Description = 7 [json_name = "description", (NYT.column_name) = "description"];
    // Рейтинг
    string Rating = 8 [json_name = "rating", (NYT.column_name) = "rating"];
    // Длительность в секундах (м.б. 0 для фильмов)
    int32 Duration = 9 [json_name = "duration", (NYT.column_name) = "duration"];
    // Возрастной ценз (м.б. 0)
    int32 AgeLimit = 10 [json_name = "age_limit", (NYT.column_name) = "age_limit"];
    // Дополнительная информация (годы сериала, жанры, etc)
    string HintInfo = 11 [json_name = "hint_info", (NYT.column_name) = "hint_info"];
}

message TVideoGallery {
    repeated TVideoObject Videos = 1 [json_name = "videos", (NYT.column_name) = "videos"];
}
